Ajout des commandes inventory, buy, removeitem.
To-do : optimiser le système en utilisant le cache